# SomeFPS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Callbacks.cpp  ErrorHandler.cpp  GLFWManager.cpp  Game.cpp  IRenderable.cpp  LICENSE  Logger.cpp  Main.cpp  Makefile  README.md  Renderer.cpp  ResourceLoader.cpp  Shader.cpp  StateManager.cpp  Transform.cpp  Triangle.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  aa.txt  asdf.cpp  bindable.hpp  build.ninja  callbacks.hpp  camera.hpp  cmake_install.cmake  defined_types.hpp  factories.hpp  game.hpp  game_objects.hpp  glfw_constants.hpp  glfw_manager.hpp  logging.hpp  mesh.hpp  rendering.hpp  resource_loading.hpp  (+14 more)
assets/shaders/: FragShader.glsl  VertShader.glsl
callbacks/: ErrorCallback.cpp  callbacks.hpp
camera/: camera.hpp
constants/: glfw_constants.hpp  shader_constants.hpp
exceptions/: exceptions.hpp
exceptions/resources/: ResourceNotFoundException.cpp
game/: GLFWManager.cpp  Game.cpp  game.hpp  glfw_manager.hpp
game/game_objects/: GameObject.cpp  game_objects.hpp
game/game_objects/2D/: Title.cpp
game/game_objects/3D/: CubeObject.cpp  cube_object.hpp
game/ticking/: GameTicker.cpp  ticking.hpp
gui2D/: Title.cpp  title.hpp
lib/: freetyped.lib  libpng16d.lib
logger/: Logger.cpp  logger.hpp
renderer/: Renderer.cpp  renderer.hpp
renderer/model/: Mesh.cpp  Model.cpp  mesh.hpp  model.hpp
renderer/resources/: bindable.hpp
renderer/resources/material/: Material.cpp  material.hpp
renderer/resources/shader/: ShaderProgram.cpp  shader.hpp
renderer/resources/texture/: texture.hpp
renderer/resources/texture/image/: Image.cpp  image.hpp
renderer/transformation/: Transform.cpp  Transformation.cpp  transformation.hpp
renderer/vertex_array/: VertexArray.cpp  vertex_array.hpp
resources/: Resource.cpp  ResourceImpl.cpp  ResourceLoader.cpp  ResourceLoader.inl  resource.hpp  resource_list.hpp  resource_loader.hpp
resources/factories/: ImageLoader.cpp  ModelLoader.cpp  OBJLoader.cpp  TextLoader.cpp  factories.hpp
types/: defined_types.hpp
window/: Window.cpp  window.hpp
